Done adaptive personal area

--- a/src/blocks/components/ledger/ledger.pug
+++ b/src/blocks/components/ledger/ledger.pug
@@ -49,7 +49,7 @@ form.ledger__form
                 input(type='text', placeholder='15 окт 2018')
             .ledger__length
                 input(type='text', placeholder='20 000 км')
-            .ledger__text
+            .ledger__select
                 +select(['Замена топливного фильтра', 'test'], 'test', 'js-select-gray')
             .ledger__text
                 input(type='text', placeholder='Замена после покупки авто')
