--- a/src/blocks/modules/personal-area/personal-area.pug
+++ b/src/blocks/modules/personal-area/personal-area.pug
@@ -35,23 +35,19 @@ section.personal-area
                         .personal-area__auto
                             .personal-area__info
                                 | Lexus LX III Рестайлинг 2 2015 - н.в.
-                            a(href="#").personal-area-area__remove
-                            .remove.personal-area__remove Удалить
+                            a(href="#").remove.personal-area__remove Удалить
                         .personal-area__auto
                             .personal-area__info
                                 | Lexus LX III Рестайлинг 2 2015 - н.в.
-                            a(href="#").personal-area-area__remove
-                            .remove.personal-area__remove Удалить
+                            a(href="#").remove.personal-area__remove Удалить
                         .personal-area__auto
                             .personal-area__info
                                 | Lexus LX III Рестайлинг 2 2015 - н.в.
-                            a(href="#").personal-area-area__remove
-                            .remove.personal-area__remove Удалить
+                            a(href="#").remove.personal-area__remove Удалить
                         .personal-area__auto
                             .personal-area__info
                                 | Lexus LX III Рестайлинг 2 2015 - н.в.
-                            a(href="#").personal-area-area__remove
-                            .remove.personal-area__remove Удалить
+                            a(href="#").remove.personal-area__remove Удалить
 
                     h3.personal-area__h3 Добавить
                     form.filter__form
