--- a/src/blocks/components/button/_button.scss
+++ b/src/blocks/components/button/_button.scss
@@ -136,6 +136,15 @@ button {
     padding-left: 28px;
     text-decoration: none;
     cursor: pointer;
+    box-sizing: border-box;
+    display: inline-block;
+
+    @include sm-block {
+        background: #F3F3F3;
+        border-radius: 3px 0 2px;
+        font-size: 13px;
+        padding: 6px 5px 6px 28px;
+    }
 
     &:before {
         content: "";
@@ -149,6 +158,12 @@ button {
         margin: auto;
         background-color: $gray;
         border-radius: 50%;
+
+        @include sm-block {
+            width: 16px;
+            height: 16px;
+            left: 5px;
+        }
     }
     &:after {
         content: "";
@@ -162,6 +177,11 @@ button {
         height: 2px;
         background: $white;
         border-radius: 4px;
+
+        @include sm-block {
+            width: 8px;
+            left: 9px;
+        }
     }
 }
 
