--- a/src/blocks/components/ledger/_ledger.scss
+++ b/src/blocks/components/ledger/_ledger.scss
@@ -5,21 +5,39 @@
   width: 100%;
   padding-bottom: 10px;
 
+  @include lg-block {
+    display: block;
+  }
+
   &__head {
     display: table-header-group;
     font-weight: normal;
     font-size: 15px;
     color: #919191;
+
+    @include lg-block {
+      display: none;
+    }
   }
 
   &__body {
     display: table-row-group;
+    @include lg-block {
+      display: block;
+    }
   }
 
   &__row {
     display: table-row;
     box-sizing: border-box;
     margin-bottom: 10px;
+
+    @include lg-block {
+      display: flex;
+      flex-direction: column;
+      border: 1px solid #e0e0e0;
+      border-radius: 3px;
+    }
   }
 
   &__form {
@@ -33,27 +51,43 @@
       justify-content: space-between;
       align-items: center;
 
+      @include lg-block {
+        flex-direction: column;
+        align-items: flex-start;
+        border: 1px solid #e0e0e0;
+        border-radius: 3px;
+        padding: 20px 15px 0;
+      }
+
+      @include md-block {
+        padding: 13px 12px;
+      }
+
       & input,
-      & select {
+      & .select2 {
         width: #{calc(100% - 12px)};
         height: 42px;
-        //margin-right: 12px;
-
+        @include lg-block {
+          width: 100%;
+          min-width: 100%;
+          max-width: 100%;
+          margin-bottom: 14px;
+        }
       }
     }
+
+
 
     & .button-add {
       height: 30px;
       padding-top: 0;
       padding-bottom: 0;
       box-sizing: border-box;
-      margin-top: 10px;
+      margin-top: 20px;
       display: inline-flex;
       align-items: center;
     }
   }
-
-
 
   &__item {
     display: table-cell;
@@ -61,6 +95,35 @@
     border-top: 1px solid #e0e0e0;
     border-bottom: 1px solid #e0e0e0;
     width: auto;
+
+    @include lg-block {
+      display: block;
+      width: 100%;
+      border: none;
+      padding-top: 10px;
+      padding-bottom: 10px;
+      box-sizing: border-box;
+
+      &:before {
+        content: attr(data-th);
+        display: block;
+        font-size: 13px;
+        line-height: 25px;
+        color: #919191;
+      }
+
+      &:first-child {
+        border: none;
+      }
+
+      &:last-child {
+        border: none;
+      }
+    }
+
+    @include md-block {
+      padding: 10px 12px;
+    }
 
     &:first-child {
       border-top-left-radius: 3px;
@@ -95,21 +158,87 @@
     color: #333333;
   }
 
+  &__select {
+    padding-right: 15px;
+    @include lg-block {
+      display: block;
+      width: 100%;
+      box-sizing: border-box;
+      min-width: 100%;
+      max-width: 100%;
+      padding-right: 0;
+    }
+
+  }
+
+
   &__date,
   &__length {
     width: 15%;
+
+    @include lg-block {
+      display: block;
+      width: 100%;
+      box-sizing: border-box;
+      min-width: 100%;
+      max-width: 100%;
+    }
   }
 
   &__text {
     width: 25%;
+    @include lg-block {
+      display: block;
+      width: 100%;
+      box-sizing: border-box;
+    }
   }
 
-  &__remove {
+   &__remove {
+    @include xl-block {
+      width: 10%;
+    }
+  }
+
+   &__remove {
     width: 7%;
-    padding: 20px 15px;
+    padding: 12px 15px;
     text-align: right;
     font-weight: normal;
     font-size: 15px;
     color: #919191;
+
+    @include lg-block {
+      display: block;
+      width: 100%;
+      box-sizing: border-box;
+      padding-top: 0;
+    }
+
+    @include md-block {
+      position: relative;
+      padding: 5px;
+
+      & .remove {
+       position: absolute;
+       bottom: 0;
+       right: 0;
+      }
+    }
+  }
+
+  &__form &__remove {
+    @include lg-block {
+      padding-top: 0;
+      padding-right: 0;
+    }
+
+    @include md-block {
+      & .remove {
+        position: absolute;
+        bottom: -13px;
+        right: -12px;
+      }
+    }
   }
 }
