--- a/src/blocks/modules/modals/modals.pug
+++ b/src/blocks/modules/modals/modals.pug
@@ -1,3 +1,4 @@
 .modal-list
-    include ask-question
-    include remind-me
+    include auth-registr
+    //include ask-question
+    //include remind-me
