--- a/src/blocks/components/banners-sidebar/_banners-sidebar.scss
+++ b/src/blocks/components/banners-sidebar/_banners-sidebar.scss
@@ -1,10 +1,28 @@
 .banners-sidebar {
   margin-top: 40px;
 
+  @include lg-block {
+    margin-top: 30px;
+  }
+
   &__item {
+    max-width: 304px;
     margin-bottom: 20px;
     text-decoration: none;
     display: inline-block;
+
+    @include lg-block {
+      margin-bottom: 0;
+      margin-right: 15px;
+    }
+
+    @include sm-block {
+      margin-bottom: 10px;
+      margin-right: 0;
+      max-width: 100%;
+      width: 100%;
+    }
+
     & img {
       width: 100%;
     }
