--- a/src/blocks/components/banners/_banners.scss
+++ b/src/blocks/components/banners/_banners.scss
@@ -1,9 +1,9 @@
 .banners {
-  padding-top: 30px;
-  padding-bottom: 55px;
+  margin-top: 30px;
+  margin-bottom: 55px;
 
   @include md-block {
-    padding-bottom: 20px;
+    margin-bottom: 20px;
   }
 
   &__list {
