--- a/src/blocks/components/question/_question.scss
+++ b/src/blocks/components/question/_question.scss
@@ -1,18 +1,37 @@
 .question {
 
+  &__section {
+    margin-bottom: 100px;
+
+    @include lg-block {
+      margin-bottom: 30px;
+    }
+  }
+
   &__top {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 25px;
+    margin-left: 50px;
+
+    @include sm-block {
+      flex-direction: column;
+      align-items: flex-end;
+      margin-left: 0;
+    }
   }
 
   &__title {
-    margin-left: 30px;
     font-style: normal;
     font-weight: normal;
     font-size: 15px;
     color: $dark-gray;
+
+    @include sm-block {
+      margin-bottom: 20px;
+      align-self: flex-start;
+    }
   }
 
   &__item {
@@ -22,6 +41,14 @@
     border-radius: 8px;
     margin-bottom: 20px;
     min-height: 220px;
+
+    @include md-block {
+      padding: 20px 30px;
+    }
+
+    @include sm-block {
+      padding: 15px 20px;
+    }
   }
 
   &__name {
@@ -30,6 +57,10 @@
     font-size: 28px;
     color: $dark-gray;
     margin-bottom: 15px;
+
+    @include sm-block {
+      font-size: 24px;
+    }
   }
 
   &__text {
@@ -38,11 +69,22 @@
     font-size: 18px;
     line-height: 30px;
     color: $base-color-text;
+
+    @include sm-block {
+      font-size: 16px;
+      line-height: 27px;
+    }
   }
 
   &__right {
     position: relative;
-    margin-left: 30px;
+    margin-left: 50px;
+    margin-right: 20px;
+
+    @include sm-block {
+      margin-left: 0;
+    }
+
 
     &:before {
       content: '';
@@ -59,7 +101,13 @@
 
   &__left {
     position: relative;
-    margin-right: 30px;
+    margin-right: 50px;
+    margin-left: 20px;
+
+    @include sm-block {
+      margin-right: 0;
+    }
+
     &:before {
       content: '';
       position: absolute;
