--- a/src/blocks/modules/modals/_modals.scss
+++ b/src/blocks/modules/modals/_modals.scss
@@ -1,13 +1,53 @@
+body {
+    background-color: #5F9EA0;
+}
 .modal {
-    // background-color: #fff;
+    position: relative;
+    padding: 45px 50px 55px;
+    background-color: $white;
     box-sizing: border-box;
-    height: 100%;
-    min-height: 100%;
+    width: 100%;
+    margin: auto;
+
+    & a {
+        font-style: normal;
+        font-weight: normal;
+        font-size: 16px;
+        color: #000;
+        text-decoration: none;
+    }
+
+    &__close {
+        position: absolute;
+        right: 0;
+        top: 0;
+        width: 46px;
+        height: 46px;
+        background: $yellow;
+        opacity: 1;
+        cursor: pointer;
+
+        &:before,
+        &:after {
+            height: 26px;
+            width: 2px;
+            background-color: $base-color-text;
+            top: 10px;
+            left: 22px;
+        }
+    }
+
+
+    &__auth-registr {
+        max-width: 500px;
+        text-align: center;
+    }
+
 
     &__title {
         font-weight: 500;
         font-size: 30px;
-        color: #16162d;
+        color: $dark-gray;
         padding-bottom: 30px;
     }
 
@@ -15,6 +55,81 @@
         font-weight: normal;
         font-size: 15px;
         color: #333333;
+    }
+
+    &__hulf {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    &__button {
+
+        &-sign-in {
+            width: 170px;
+            height: 42px;
+            box-sizing: border-box;
+            padding-top: 0;
+            padding-bottom: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+    }
+
+    &__link {
+        &-forgot {
+            margin-right: auto;
+            margin-left: auto;
+        }
+    }
+
+
+    &__tab {
+        &-menu {
+            display: inline-block;
+            list-style-type: none;
+            border: 2px solid $dark-gray;
+            box-sizing: border-box;
+            border-radius: 8px;
+            font-size: 0;
+            text-align: center;
+
+            & li {
+                display: inline-block;
+                padding: 7px 23px;
+                font-style: normal;
+                font-weight: 500;
+                font-size: 18px;
+                color: $dark-gray;
+                cursor: pointer;
+
+                &.active {
+                    background-color: $dark-gray;
+                    color: $white;
+                }
+            }
+
+        }
+
+        &-list {
+            margin-top: 30px;
+            text-align: left;
+
+            & input {
+                width: 100%;
+                height: 42px;
+                margin-bottom: 12px;
+            }
+        }
+
+        &-item {
+            display: none;
+
+            &.active {
+                display: block;
+            }
+        }
     }
 }
 
