--- a/src/blocks/modules/modals/auth-registr.pug
+++ b/src/blocks/modules/modals/auth-registr.pug
@@ -1,4 +1,4 @@
-.modal.modal__auth-registr.js-tabs
+.modal.modal__auth-registr.js-auth-register-tabs
     .close.modal__close
     ul.modal__tab-menu
         li.active(data-tab-menu='auth') Вход с паролем
@@ -23,10 +23,9 @@
                     a(href='#')=' персональных данных'
     .modal__social
         .modal__title-line
-            .modal__title-center
-                | или
-                span=' войти '
-                | через
+            .modal__title-center='или '
+                span.js-tab-modal-text='войти'
+                |  через
         .modal__social-list
             a(href="#").modal__social-item.icon-vk_color
             a(href="#").modal__social-item.icon-fb_color
