Done markup modals, added base js for modal and done ask question modal

--- a/src/blocks/modules/header/header.pug
+++ b/src/blocks/modules/header/header.pug
@@ -17,7 +17,7 @@ header.header
                 .header__right
                     .header__personal-area-icon
                         include ../../components/personal-area-icon/personal-area-icon
-                        a(href="#").button-black.header__ask-question Задать вопрос
+                        a(href="#", data-modal-type='ask-question').button-black.header__ask-question.js-modal-open Задать вопрос
                     +personal-auto('Mazda 323 III (BF) 1985 - 1989')
     include ../../components/mobile-menu/mobile-menu
     .header__menu
