--- a/src/blocks/modules/modals/modals.pug
+++ b/src/blocks/modules/modals/modals.pug
@@ -1,5 +1,5 @@
 .modal-list
-    include auth-registr
-    //include ask-question
+    include auth-register
+    include ask-question
     include remind-me
     include select-car
