--- a/src/blocks/components/banner-ask-question/banner-ask-question.pug
+++ b/src/blocks/components/banner-ask-question/banner-ask-question.pug
@@ -3,7 +3,7 @@
         p Не нашлось нужной публикации?
         p Специалисты готовы поделиться своими знаниями.
         p Спрашивай!
-    a(href="javascript:void(0)").button.button-yellow Задать вопрос
+    a(href="javascript:void(0)", data-modal-type='ask-question').button.button-yellow.js-modal-open Задать вопрос
 
 
 
