--- a/src/blocks/modules/modals/_modals.scss
+++ b/src/blocks/modules/modals/_modals.scss
@@ -1,10 +1,16 @@
 .modal {
-    position: relative;
-    padding: 45px 50px 55px;
+    position: fixed;
     background-color: $white;
-    box-sizing: border-box;
     width: 100%;
     margin: auto;
+
+    &-list {
+        display: none;
+    }
+
+    &__inner {
+        padding: 45px 50px 55px;
+    }
 
     & a {
         font-style: normal;
@@ -12,6 +18,32 @@
         font-size: 16px;
         color: #000;
         text-decoration: none;
+    }
+
+    & textarea {
+        width: 100%;
+        min-height: 220px;
+        background: #eff1f4;
+        border-radius: 4px;
+        border: none;
+        font-weight: normal;
+        font-size: 15px;
+        color: #ababab;
+        resize: none;
+        padding: 13px;
+        margin-bottom: 20px;
+    }
+
+    & .select2,
+    & input:not([type=radio]),
+    & input:not([type=checkbox]) {
+        margin-bottom: 20px;
+        width: 100%;
+        height: 42px;
+
+        &:last-child {
+            margin-bottom: 0;
+        }
     }
 
     &__close {
@@ -34,16 +66,11 @@
         }
     }
 
-    &__auth-registr {
-        max-width: 500px;
-        text-align: center;
-    }
-
     &__title {
         font-weight: 500;
         font-size: 30px;
         color: $dark-gray;
-        padding-bottom: 30px;
+        margin-bottom: 30px;
 
         &-line {
             position: relative;
@@ -84,10 +111,15 @@
         color: $base-color-text;
     }
 
-    &__hulf {
+    & &__hulf {
         display: flex;
         align-items: center;
         justify-content: space-between;
+
+        & input {
+            width: #{calc(50% - 12px)};
+            margin: 0;
+        }
     }
 
     &__button {
@@ -203,37 +235,52 @@
             }
         }
     }
-}
 
-.form-dispatch {
-    & label {
-        display: block;
+    &__auth-register {
+        max-width: 500px;
+        text-align: center;
+    }
+
+    &__ask-question {
+        max-width: 720px;
+    }
+
+
+    & &__text {
         margin-bottom: 20px;
     }
 
-    & input {
-        width: 100%;
+    & &__block {
+        margin-top: 30px;
     }
 
-    & textarea {
-        width: 100%;
-        background: #eff1f4;
-        border-radius: 4px;
-        border: none;
-        font-weight: normal;
-        font-size: 15px;
-        color: #ababab;
+    &__ask-question &__policy {
+        width: 50%;
+        padding-left: 22px;
     }
 
-    & p {
-        font-weight: normal;
-        font-size: 14px;
-        color: #919191;
+    &__remind-me {
+        max-width: 500px;
+        text-align: left;
     }
 
-    & a {
-        color: #919191;
-        text-decoration: none;
+
+    &__select-horisontal {
+        display: flex;
+
+        & .select2 {
+            margin-right: 20px;
+            margin-bottom: 0;
+
+            &:last-child {
+                margin-right: 0;
+            }
+        }
+    }
+
+    &__select-car {
+        max-width: 800px;
+        text-align: left;
     }
 }
 
@@ -241,63 +288,13 @@
     width: 310px;
 }
 
-/* Скрываем реальный чекбокс */
-.modal__input-checkbox {
-    display: none;
-}
-/* Задаем внешний вид для кастомного чекбокса */
-.modal__input-checkbox-custom {
-    position: relative;
-    width: 24px;
-    height: 24px;
-    margin-right: 5px;
-    border-radius: 50%;
-    background: #127aef;
-}
-
-/* Кастомный чекбокс и лейбл центрируем по вертикали. Свойство display: inline-block обязательно должно быть */
-.modal__input-checkbox-custom,
-.modal__label-text {
-    display: inline-block;
-    vertical-align: middle;
-    margin-right: 10px;
-}
-
-.modal__label,
-.modal__label_checkbox {
-    margin-right: 40px;
-
-    &:last-child {
-        margin-right: 0;
-    }
-}
-
-/* Если реальный чекбокс отмечен, то тогда добавляем данный признак к кастомному чекбоксу */
-.modal__input-checkbox:checked + .modal__input-checkbox-custom::before {
-    content: "";
-    display: block;
-    position: absolute;
-    /* Задаем расстояние от верхней, правой, нижней и левой границы */
-    background: #ffffff;
-    border: 2px solid rgba(18, 122, 239, 0.75);
-    box-sizing: border-box;
-}
-
-.modal__select-car {
-    background-color: red;
-    max-width: 800px;
-    text-align: left;
-}
-
 .button__choose {
     width: 220px;
-}
-
-.modal__remind-me {
-    max-width: 500px;
-    text-align: left;
+    margin-top: 20px;
 }
 
 .button__remind {
-    width: 404px;
+    margin-top: 20px;
+    width: 100%;
 }
+
