--- a/src/blocks/modules/modals/ask-question.pug
+++ b/src/blocks/modules/modals/ask-question.pug
@@ -1,9 +1,4 @@
 include ../../components/select/select
-.modal
-    .modal__close
-    .modal__title Задать вопрос
-    .modal__text Не нашлось нужной публикации? Специалисты готовы поделиться своими знаниями. Спрашивай!
-    .modal__text Ваш автомобиль
 -
     var optionsMark = [
         'Марка',
@@ -28,19 +23,25 @@ include ../../components/select/select
         'III (BF), 1985 — 1989'
     ];
 
-.modal.mask-question
 
-    form
-        +select(optionsMark)
-        +select(optionsModel)
-        +select(optionsGeneration)
+.modal.modal__ask-question.js-modal(data-modal-type='ask-question')
+    .modal__inner
+        .close.modal__close.js-modal-close
+        .modal__title Задать вопрос
+        .modal__text Не нашлось нужной публикации? Специалисты готовы поделиться своими знаниями. Спрашивай!
+        .modal__block
+            .modal__text Ваш автомобиль
+            form(action='', method='post').modal__form-ask-question
+                +select(optionsMark, 'mark', 'js-modal-select')
+                +select(optionsModel, 'model', 'js-modal-select')
+                +select(optionsGeneration, 'generation', 'js-modal-select')
 
-    .modal__text Ваш вопрос
-    form.form-dispatch
-        label
+        .modal__block
+            .modal__text Ваш вопрос
             input(name='question', type='text', placeholder='Заголовок вопроса')
-        label    
             textarea(name="textarea", placeholder="Текст вопроса")
-    button.button-yellow.button__send Отправить
-    p='Нажимая на кнопку, Вы соглашаетесь на обработку'
-    a(href='#')='персональных данных'         
+        .modal__hulf
+            button.button-yellow.button__send Отправить
+            .modal__policy
+                | Нажимая на кнопку, Вы соглашаетесь на обработку
+                a(href='#')=' персональных данных'
