--- a/src/blocks/modules/modals/select-car.pug
+++ b/src/blocks/modules/modals/select-car.pug
@@ -1,17 +1,46 @@
-include ../../components/select/select 
-.modal.modal__select-car
-    .close.modal__close
-    .modal__title Выберите автомобиль
-    label.modal__label.modal__label_checkbox
-        input.modal__input-checkbox(name="agree" type="checkbox")
-        span.modal__input-checkbox-custom
-        span.modal__label-text Легковой
-    label.modal__label.modal__label_checkbox
-        input.modal__input-checkbox(name="agree" type="checkbox")
-        span.modal__input-checkbox-custom
-        span.modal__label-text Коммерческий
-        form
-        //- +select(optionsMark)
-        //- +select(optionsModel)
-        //- +select(optionsGeneration)
-    button.button-yellow.button__choose Выбрать
+include ../../components/select/select
+-
+    var optionsMark = [
+        'Марка',
+        'Toyota',
+        'Лада',
+        'Mazda'
+    ];
+
+-
+    var optionsModel = [
+        'Модель',
+        'Camry',
+        'Vesta',
+        '323'
+    ];
+
+-
+    var optionsGeneration = [
+        'Поколение',
+        '2018',
+        '2016',
+        'III (BF), 1985 — 1989'
+    ];
+
+
+.modal.modal__select-car.js-modal(data-modal-type='select-car')
+    .modal__inner
+        .close.modal__close.js-modal-close
+        .modal__title Выберите автомобиль
+        form(action='', method='post').modal__form-select-car
+            .modal__block
+                label.label.label_checkbox
+                    input.input-checkbox(name="auto" type="radio" value="passenger")
+                    span.input-checkbox-custom
+                    span.label-text Легковой
+                label.label.label_checkbox
+                    input.input-checkbox(name="auto" type="radio" value="commercial")
+                    span.input-checkbox-custom
+                    span.label-text Коммерческий
+            .modal__block
+                .modal__select-horisontal
+                    +select(optionsMark, 'mark', 'js-select-gray')
+                    +select(optionsModel, 'model', 'js-select-gray')
+                    +select(optionsGeneration, 'generation', 'js-select-gray')
+            button.button-yellow.button__choose Выбрать
