Added mobile styles for modal

--- a/src/blocks/components/mobile-menu/mobile-menu.pug
+++ b/src/blocks/components/mobile-menu/mobile-menu.pug
@@ -7,4 +7,4 @@
             include ../../modules/footer/footer-menu
     .mobile-menu__ask-question
         .container
-            a(href="javascript:void(0)").button.button-yellow Задать вопрос
+            a(href="javascript:void(0)", data-modal-type='ask-question').button.button-yellow.js-modal-open Задать вопрос
