--- a/src/blocks/modules/modals/ask-question.pug
+++ b/src/blocks/modules/modals/ask-question.pug
@@ -41,7 +41,7 @@ include ../../components/select/select
             input(name='question', type='text', placeholder='Заголовок вопроса')
             textarea(name="textarea", placeholder="Текст вопроса")
         .modal__hulf
-            button.button-yellow.button__send Отправить
+            button.button.button-yellow.button__send Отправить
             .modal__policy
                 | Нажимая на кнопку, Вы соглашаетесь на обработку
                 a(href='#')=' персональных данных'
